testdata/bad/undefined-named-slotif/index.tw
<p>@component('user')@slotif(true, 'test')@end</p>